--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,25 +29,7 @@ jobs:
     - name: Build with Maven
       run: mvn -B package --file pom.xml
 
-#     - name: Publish to GitHub Packages Apache Maven
-#       run: mvn deploy
-#       env:
-#         GITHUB_TOKEN: ${{ github.token }}
-        
-    - name: Maven Release and Publish
-      # You may pin to the exact commit or the version.
-      # uses: mg-smartrent/github-actions-maven-release@5f387c0d77b22da293e9812d43ab90cdc49f475a
-      uses: mg-smartrent/github-actions-maven-release@v1.5
-      with:
-        # Maven server repository id to push the artefacts to
-        maven-repo-server-id: 'github'
-        # Maven server repository username
-        maven-repo-server-username: 'cturner-nbme'
-        # Maven server repository password
-        maven-repo-server-password: ${{ github.token }}
-        # The git user name for commiting the release
-        git-release-bot-name: cturner-nbme
-        # The git user email for commiting the release
-        git-release-bot-email: cturner@nbme.org
-        # Github access token. https://help.github.com/en/github/authenticating-to-github/creating-a-personal-access-token-for-the-command-line
-        access-token: ${{ github.token }}
+    - name: Publish to GitHub Packages Apache Maven
+      run: mvn deploy -s $GITHUB_WORKSPACE/settings.xml
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
