--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,12 +24,17 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
-        settings-path: ${{ github.workspace }} # location for the settings.xml file
+#         settings-path: ${{ github.workspace }} # location for the settings.xml file
 
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
+#     - name: Build with Maven
+#       run: mvn -B package --file pom.xml
+
+    - name: setup-maven-settings
+      uses: s4u/maven-settings-action@v1
+      with:
+        servers: '[{"id": "github", "username": "x-access-token", "password": "${GITHUB_TOKEN}"}]'
 
     - name: Publish to GitHub Packages Apache Maven
       run: mvn deploy #-s $GITHUB_WORKSPACE/settings.xml
       env:
-        GITHUB_TOKEN: ${{ secrets.ACTION_SECRET }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
